fix letter-spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@ html {
 body {
   min-width: 375px;
   font-family: 'Noto Serif', 'Noto Serif JP', serif;
+  letter-spacing: .05em;
 }
 
 img {
@@ -28,7 +29,6 @@ h1,
 h2,
 h3,
 h4 {
-  letter-spacing: .2rem;
   font-style: italic;
 }
 
